# Olaf-Robots

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  README.md  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: assembly_guide.md  bom_mindmap.mmd  configure_motors.md  sim2real.md  split_brain_architecture.mmd  split_brain_flow.d2
experiments/LeRobot/: README.md  new_record_episodes_hdf5_NOT_WORKING.py  record_episodes_hdf5.py
experiments/RL/: env.py  env_humanoid.py  old_test.py  play_policy.py  pretrain_bc.py  pretrain_dbrm.py  pretrain_gail.py  record_episodes.py  replay_episodes.py  train.py  view_hdf5.py
experiments/anti_gravity_leg/: anti_gravity.py
experiments/identification/: check_speed.py  get_data.py
experiments/mujoco/: mujoco_placo_walk_engine_demo.py  mujoco_record_amp.py  mujoco_walk_engine.py  onnx_AMP_for_hardware_mujoco.py  onnx_AMP_mujoco.py
experiments/placo/: auto_placo_record_amp.py  (+7 more)
print/: head.stl
scripts/: auto_deploy_node_0.sh  auto_deploy_node_1.sh  auto_deploy_node_10.sh  auto_deploy_node_11.sh  auto_deploy_node_12.sh  auto_deploy_node_13.sh  auto_deploy_node_14.sh  auto_deploy_node_15.sh  auto_deploy_node_16.sh  auto_deploy_node_17.sh  auto_deploy_node_18.sh  auto_deploy_node_19.sh  auto_deploy_node_2.sh  auto_deploy_node_3.sh  auto_deploy_node_4.sh  auto_deploy_node_5.sh  auto_deploy_node_6.sh  auto_deploy_node_7.sh  auto_deploy_node_8.sh  auto_deploy_node_9.sh
src/rust/: Cargo.toml
src/rust/src/: lib.rs  serial.rs
(+60 files in other folders)
