[package]
name = "Olaf_Robots_utils"
version = "0.1.0"
edition = "2021"
authors = ["Olaf Robotics Team <contact@OlafRobotics.com>"]
description = "High-performance sensor processing utilities for Olaf Robotics"

[lib]
name = "Olaf_Robots_utils"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
